# ics23.js

./: .gitignore  .prettierrc  README.md  codecov.yml  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: build.yml  publish.yml
rust/: Cargo.toml
rust/src/: lib.rs  utils.rs
src/: index.ts
test/: batch-proof.test.ts  single-proof.test.ts
test/mocks/: wasmPath.ts
test/utils/: to-batch-items.ts  to-ics23-verify-args.ts
