[package]
name = "ics23-wasm"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Gldywn"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ics23 = { version = "0.12.0" }
wasm-bindgen = { version = "0.2" }
anyhow = "1"
prost = "0.13"
js-sys = "0.3"

[features]
default = []

# To develop against local repo, uncomment and adjust path:
# [patch.crates-io]
# ics23 = { path = "../../ics23/rust" }
